<?xml version="1.0"?>
<package>
  <name>franka_ros</name>
  <version>0.0.0</version>
  <description>ROS support for FRANKA</description>

  <maintainer email="info@franka.de">FRANKA EMIKA Research Interface Team</maintainer>
  <author email="info@franka.de">FRANKA EMIKA Research Interface Team</author>

  <license>NONE</license>
  <url type="website">http://wiki.ros.org/franka_ros</url>
  <url type="repository">https://github.com/frankaemika/franka_ros</url>
  <url type="bugtracker">https://github.com/frankaemika/franka_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
