<?xml version="1.0"?>
<package format="2">
  <name>franka_combined_control</name>
  <version>0.7.0</version>
  <description>franka_combined_control provides a hardware node to control multiple Panda robots.</description>
  <maintainer email="support@franka.de">Franka Emika GmbH</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/franka_combined_control</url>
  <url type="repository">https://github.com/frankaemika/franka_ros</url>
  <url type="bugtracker">https://github.com/frankaemika/franka_ros/issues</url>
  <author>Franka Emika GmbH</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>franka_combinable_hw</depend>
  <depend>roscpp</depend>

  <exec_depend>franka_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <build_export_depend>message_runtime</build_export_depend>

</package>
